<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/greentexture"
    tools:context=".MainActivity" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_launcher" />
    
	<Button
	    android:id="@+id/play"
	    android:layout_centerInParent="true"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_below="@+id/imageView1"
	    android:onClick="onPlayClick"
	    android:text="@string/play" />

    <Button
        android:id="@+id/settings"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/play"
        android:onClick="onSettingsClick"
        android:text="@string/settings" />

    <Button
        android:id="@+id/stats"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/settings"
        android:onClick="onStatsClick"
        android:text="@string/stats" />

	<Button
        android:id="@+id/rules"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/stats"
        android:onClick="onRulesClick"
        android:text="@string/rules" />

	<Button
        android:id="@+id/about"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rules"
        android:onClick="onAboutClick"
        android:text="@string/about" />

	

</RelativeLayout>